--- a/naruto.html
+++ b/naruto.html
@@ -10,15 +10,28 @@
 <body>
 
     <main>
+        <div class="divres" id="res"></div>
+        <div class="conimg">
+            <img id="vila" width="150px" src="nullnaruto.jpg" alt="">
+            <img id="clã" width="150px" src="nullnaruto.jpg" alt="">
+            <img id="arma" width="150px" src="nullnaruto.jpg" alt="">
+            <img id="estilo" width="150px" src="nullnaruto.jpg" alt="">
+            <img id="modo" width="150px" src="nullnaruto.jpg" alt="">
+            <img id="extra" width="150px" src="nullnaruto.jpg" alt="">
+        </div>
+        <div class="conimg">
+            <input onclick="gerador('vila')" type="button" value="vila">
+            <input onclick="gerador('clã')" type="button" value="clan">
+            <input onclick="gerador('arma')" type="button" value="arma">
+            <input onclick="gerador('estilo')" type="button" value="estilo">
+            <input onclick="gerador('modo')" type="button" value="modo">
+            <input onclick="gerador('extra')" type="button" value="extra">
+        </div>
+        
+        <a href="naruto.html"><input type="button" value="reiniciar"></a>
 
-        <input onclick="gerador('vila')" type="button" value="vila">
-        <input onclick="gerador('clã')" type="button" value="clã">
-        <input onclick="gerador('arma')" type="button" value="arma">
-        <input onclick="gerador('extra')" type="button" value="extra">
-        <input onclick="gerador('estilo')" type="button" value="estilo">
-        <input onclick="gerador('modo')" type="button" value="modo">
+        <audio id="som" src="" autoplay></audio>
 
-        <section id="res">
 
         </section>
 
